--- a/UI/index.html
+++ b/UI/index.html
@@ -1,33 +1,26 @@
-<!DOCTYPE html>
+<!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>HOME</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css"></link>
+    <title>User profile page</title>
+    <link rel="stylesheet" href="css/style.css" />
     <script src="main.js"></script>
 </head>
-<body background="images-home.png">
-<div class="header my-body">
-    <header>
-        <h1>iReporter</h1>
-        <div class="header my-menu">
-            <ul class="nav-area nav-1">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-        <div class="ireporter-text">
-            <h2>Corruption is a huge bane to Africa’s development. African countries must develop novel and
-                localised solutions that will curb this menace, hence the birth of iReporter. iReporter enables
-                any/every citizen to bring any form of corruption to the notice of appropriate authorities and the
-                general public.
-            </h2>
-            <a href="#">Sign Up</a>
-        </div>
-    </header>
-</div>   
+<body>
+    <div class="topnav"><a class="active" href="#home">Home</a>
+        <a href="#signup">Sign Up</a>
+        <a href="#login">Log In</a>
+    </div>
+    <div class="home-content"
+    <h2>
+        iReporter
+    </h2>
+    <p2>
+        Corruption is a huge bane to Africa’s development. African countries must develop novel and
+        localised solutions that will curb this menace, hence the birth of iReporter. iReporter enables
+        any/every citizen to bring any form of corruption to the notice of appropriate authorities and the
+        general public.
+    </p2>
     
 </body>
 </html>
