--- a/UI/index.html
+++ b/UI/index.html
@@ -1,26 +1,34 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>User profile page</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="css/style.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <div class="topnav"><a class="active" href="#home">Home</a>
-        <a href="#signup">Sign Up</a>
-        <a href="#login">Log In</a>
+    <div class="landing-page">
+    <div class="welcome">
+    <h1 index-title>Welcome to iReporter</h1>
     </div>
-    <div class="home-content"
-    <h2>
-        iReporter
-    </h2>
-    <p2>
+    <br>
+    <br>
+    <div class="topnav"><a class="active" href="index.html">Home</a>
+        <a href="signup.html">Sign Up</a>
+        <a href="signup.html">Log In</a>
+    </div>
+
+        <br>
+    <div class="page-content">
+        <p2 page-content>
         Corruption is a huge bane to Africa’s development. African countries must develop novel and
-        localised solutions that will curb this menace, hence the birth of iReporter. iReporter enables
-        any/every citizen to bring any form of corruption to the notice of appropriate authorities and the
+        localised solutions <br>that will curb this menace, hence the birth of iReporter. iReporter enables
+        any/every citizen to bring any form of <br>corruption to the notice of appropriate authorities and the
         general public.
     </p2>
+    </div>
+</div>
     
 </body>
+
 </html>
