[starts #162171337]modified index page

--- a/UI/index.html
+++ b/UI/index.html
@@ -21,7 +21,7 @@
         <br>
     <div class="page-content">
         <p2 page-content>
-        Corruption is a huge bane to Africa’s development. African countries must develop novel and
+        Corruptionx is a huge bane to Africa’s development. African countries must develop novel and
         localised solutions <br>that will curb this menace, hence the birth of iReporter. iReporter enables
         any/every citizen to bring any form of <br>corruption to the notice of appropriate authorities and the
         general public.
